--- a/PDM-Project/PDM-Project/SearchPage.xaml
+++ b/PDM-Project/PDM-Project/SearchPage.xaml
@@ -2,11 +2,29 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PDM_Project.SearchPage"
-             Title="SearchPage">
-    <VerticalStackLayout>
+             Title="Cautare Prognoza Meteo">
+    <Grid RowDefinitions="*,*,*,*,*" Padding="8" RowSpacing="50" ColumnSpacing="8">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <Label 
-            Text="Cauta detalii despre vremea orasului dorit"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+            VerticalOptions="Center"
+            Text="Cauta oras"
+            Grid.ColumnSpan="2" />
+
+        <Picker 
+            x:Name="pickerOras"
+            ItemsSource="{Binding ListPrognoza}"
+            SelectedItem="{Binding PrognozaSursa}"
+            Grid.Row="1"
+            Grid.Column="1" />
+
+        <Button 
+            Text="Cauta"
+            Grid.Row="4"
+            Grid.ColumnSpan="2"
+            Command="{Binding SearchCommand}"/>
+    </Grid>
 </ContentPage>
