--- a/PDM-Project/PDM-Project/SuggestionsPage.xaml
+++ b/PDM-Project/PDM-Project/SuggestionsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PDM_Project.ResultPage"
-             Title="ResultPage">
+             x:Class="PDM_Project.SuggestionsPage"
+             Title="SuggestionsPage">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
