--- a/PDM-Project/PDM-Project/SuggestionsPage.xaml
+++ b/PDM-Project/PDM-Project/SuggestionsPage.xaml
@@ -5,8 +5,31 @@
              Title="SuggestionsPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Sugestii de activități în funcție de vreme"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <ListView
+                    x:Name="listViewFenomene"
+                     HorizontalOptions="Center" ItemSelected="listViewItemSelected" VerticalOptions="Center">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+
+                        <HorizontalStackLayout Padding="8">
+                           
+                            <Label Text="{Binding .}" VerticalOptions="Center" HorizontalOptions="Center"/>
+                        
+
+                        </HorizontalStackLayout>
+
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+
+
+        </ListView>
+
     </VerticalStackLayout>
 </ContentPage>
