--- a/PDM-Project/PDM-Project/ForecastPage.xaml
+++ b/PDM-Project/PDM-Project/ForecastPage.xaml
@@ -1,30 +1,81 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:PDM_Project"
              x:Class="PDM_Project.ForecastPage"
              Title="ForecastPage">
-    <ContentPage.BindingContext>
-        <local:PickerCityModel></local:PickerCityModel>
-    </ContentPage.BindingContext>
-    <VerticalStackLayout>
-        <Picker x:Name="pickerCity" 
-                Title="Selecteaza un oras"
-                ItemsSource="{Binding Orase}"
-                SelectedItem="{Binding SelectedCity}"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center"
-                Margin="20"/>
-        <Picker x:Name="pickerDate"
-                Title="Selecteaza o data"
-                ItemsSource="{Binding Dates}"
-                SelectedItem="{Binding SelectedDate}"
-                ItemDisplayBinding="{Binding DataString}"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center"
-                Margin="20"/>
-        <Label Text="{Binding SelectedDate.Descriere}"
-               VerticalOptions="Center"
-               HorizontalOptions="Center"/>
-    </VerticalStackLayout>
+    <StackLayout>
+
+      
+
+        <Label 
+            Text="Afla prognoza meteo pentru urmatoarele zile!"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" 
+            TextColor="DarkBlue"
+            FontSize="Medium"
+            
+            />
+
+        <HorizontalStackLayout HorizontalOptions="Center" Margin="20">
+            <Picker 
+           x:Name="pickerOras"
+            ItemsSource="{Binding listaPrognoza}"
+            VerticalOptions="Center" 
+                Margin="20"
+  
+             />
+        <Stepper Minimum="1"
+         Maximum="5"
+         Increment="1"
+         Value="1"
+         VerticalOptions="Center"
+                 ValueChanged="Stepper_ValueChanged"
+         />
+
+        <Label 
+           x:Name="labelNumarZile"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" 
+            Text="1"
+            Margin="5"/>
+        </HorizontalStackLayout>
+
+        <!--HorizontalOptions="Center"-->
+
+    
+        <!--<RadioButton Content="Celsius"
+             GroupName="grade" 
+                     IsChecked="True"
+              CheckedChanged="RadioButton_CheckedChanged"
+                     />
+        <RadioButton Content="Fahrenheit"
+             GroupName="grade" 
+           CheckedChanged="RadioButton_CheckedChanged"
+                   />-->
+
+        <HorizontalStackLayout HorizontalOptions="Center" Margin="20">
+        <Button Text="Arata-mi in grade Celsius"
+            Clicked="Button_Clicked"
+                BackgroundColor="Aquamarine"
+                TextColor="Black"
+                Margin="10"
+                />
+        <Button Text="Arata-mi in grade Fahrenheit"
+                Clicked="Button_Clicked_F"
+                  BackgroundColor="Aquamarine"
+                 TextColor="Black"
+                 Margin="10"
+                />
+
+        </HorizontalStackLayout>
+
+        <Label 
+           x:Name="labelRaspuns"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" 
+            FontAttributes="Bold"
+            TextColor="DarkBlue"
+            />
+       
+    </StackLayout>
 </ContentPage>
